# rust-layered-app

./: .envrc  .envrc.template  Cargo.toml  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: bin.rs
book-adapter/book-database/: Cargo.toml
book-adapter/book-database/src/: lib.rs  repository.rs  setup.rs
book-adapter/book-handler/: Cargo.toml
book-adapter/book-handler/src/handler/: hello.rs
book-app/: Cargo.toml
book-app/src/: adapters.rs  bin.rs  config.rs  lib.rs
book-domain/: Cargo.toml
book-domain/src/: repository.rs
book-usecase/: Cargo.toml
book-usecase/src/: get_book.rs  lib.rs
domain/model/src/: repository.rs
domain/usecase/: Cargo.toml
domain/usecase/src/: lib.rs
infra/database/: Cargo.toml
infra/database/src/: lib.rs  repository.rs  setup.rs
infra/rest/: Cargo.toml
infra/rest/src/handler/: hello.rs
