[package]
name = "book-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
book-domain = { path = "../../book-domain" }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
tokio = { version = "1.24.1", features = ["rt", "macros"] }
async-trait = "0.1.61"
chrono = "0.4.23"
